<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:background="@drawable/item_border"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/img_url_item"
        android:layout_width="360dp"
        android:layout_height="220dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:id="@+id/txv_nome_card"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/teste"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_url_item" />

    <TextView
        android:id="@+id/txv_wpp_card"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/teste"
        android:textSize="20sp"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_nome_card" />

    <Button
        android:id="@+id/btnx_ligar"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#2D7112"
        android:text="@string/btn_ligar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_wpp_card" />

    <Button

        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="#2D7112"
        android:text="@string/btn_wpp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_wpp_card" />

</androidx.constraintlayout.widget.ConstraintLayout>